feat: Configurando a build

--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "rocketlog",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "build": "tsup src --out-dir build",
+    "start": "node build/server.js"
   },
   "author": "Thiago Brolly",
   "license": "ISC",
@@ -22,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.12",
     "prisma": "^5.19.1",
+    "tsup": "^8.3.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
